made code dry, fixed some spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
 }
 
+/* MAIN CONTAINER */
 .App {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -13,6 +14,7 @@
   height: 100vh;
 }
 
+/* NAV */
 nav {
   background: rgba(116, 51, 241);
   width: 100%;
@@ -68,41 +70,52 @@ h1 {
 .repo-labels {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
-  display: grid;
   margin: 0 50px;
-  justify-content: space-between;
-  align-items: center;
-  /* grid-template-columns: repeat(4, 1fr); */
-  grid-template-columns: 2fr 2fr 2fr 1fr;
 }
 
-.repo-font {
+.label-font {
   font-size: 14px;
   margin-bottom: 10px;
 }
 
-.repo-labels h5:nth-of-type(1) {
+/* FAVOURITE LABELS */
+
+.favourites-labels {
+  grid-column: 2 / 3;
+  grid-row: 2 / -1;
+  margin: 30px 50px 0 50px;
+}
+
+.favourites-container {
+  grid-column: 2 / -1;
+  grid-row: 2 / -1;
+  background: rgba(243, 236, 254);
+}
+
+/* DRY CODE FOR LABELS */
+
+.labels {
+  display: grid;
+  grid-template-columns: repeat(3, 3fr) 1fr;
+}
+
+.labels h5:nth-of-type(1) {
   grid-column: 1 / 2;
 }
 
-.repo-labels h5:nth-of-type(2) {
-  grid-column: 2 / 3;
+.labels h5:nth-of-type(2) {
+  grid-column: 2 / 3;  
 }
 
-.repo-labels h5:nth-of-type(3) {
-  grid-column: 3 / 4; 
-}
-
-.repo-labels h5:nth-of-type(4) {
-  grid-column: 4 / 5; 
+.labels h5:nth-of-type(3) {
+  grid-column: 3 / 4;  
 }
 
 /* API DATA */
 
 .repo-data {
   display: grid;
-  /* grid-template-columns: repeat(4, 1fr); */
-  grid-template-columns: 2fr 2fr 2fr 1fr;
+  grid-template-columns: repeat(3, 3fr) 1fr;
   justify-content: space-between;
   align-items: center;
   margin: 0 50px;
@@ -132,41 +145,8 @@ h1 {
   font-weight: bold
 }
 
-.font {
+.data-font {
   font-size: 12px;
-}
-
-/* FAVOURITE LABELS */
-
-.favourites-labels {
-  grid-column: 2 / 3;
-  grid-row: 2 / -1;
-  display: grid;
-  margin: 30px 50px 0 50px;
-  justify-content: space-between;
-  grid-template-columns: 2fr 2fr 2fr 1fr;
-}
-
-.favourites-labels h5:nth-of-type(1) {
-  grid-column: 1 / 2;  
-}
-
-.favourites-labels h5:nth-of-type(2) {
-  grid-column: 2 / 3;  
-}
-
-.favourites-labels h5:nth-of-type(3) {
-  grid-column: 3 / 4;  
-}
-
-.favourites-labels h5:nth-of-type(4) {
-  grid-column: 4 / 5;  
-}
-
-.favourites-container {
-  grid-column: 2 / -1;
-  grid-row: 2 / -1;
-  background: rgba(243, 236, 254);
 }
 
 /* DUMMY DATA */
